# Abraxas

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  manage.py  pyproject.toml  skills_schema.sql
docs/: BACKEND_GUIDE.md  CONTRIBUTING.md  FRONTEND_GUIDE.md
docs/devlog/: 20-fevereiro.md
src/apps/core/: game_instance.py  models.py  rpg_engine.py
src/apps/core/data/: armor.json  core_rules.json  skills.json  weapons.json
src/database/: audit_schema.sql  combat_schema.sql  schema.sql
src/mechanics/: combat_engine.py  dice_engine.py  engine.py
src/tui/: app.py
