[tool.poetry]
name = "abraxas"
version = "0.1.0"
description = "Uma obra ergódica e sistema de RPG de mesa guiado por interface de terminal (TUI)"
authors = ["Aurora <gdcm10@gmail.com>"]
readme = "README.md"
include = ["docs/CONTRIBUTING.md"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
textual = "^0.52.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.4.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"